@@ -8,6 +8,6 @@ Depends: survival
 Imports: foreach, methods, MLEcens
 LinkingTo: RcppEigen
 Maintainer: Clifford Anderson-Bergman <pistacliffcho@gmail.com>
-Description: Regression models for interval censored data. Currently supports Cox-PH and proportional odds models. Allows for both semi and fully parametric models. Includes functions for easy visual diagnostics of model fits and imputation of censored data. 
+Description: Regression models for interval censored data. Currently supports Cox-PH and proportional odds models. Allows for both semi and fully parametric models. Includes functions for easy visual diagnostics of model fits and imputation of censored data. Includes fast algorithm for computing non-parametric maximum likelihood estimator. 
 License: LGPL (>= 2.0, < 3)
 Packaged: 2014-08-20 19:43:34 UTC; cliff
